--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <!-- icon -->
     <script src="https://kit.fontawesome.com/73bcd336f4.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
     <link rel="stylesheet" href="dist/simple-lightbox.css?v2.14.0" />
     <link rel="stylesheet" href="style.css">
 
@@ -64,12 +67,72 @@
         </div>
     </header>
     <main>
-        <div class="swipper mySwiper">
-            <div class="swiper-wrapper gallery">
-                <a href="img/header1.png" class="swiper-slide"><img src="img/header1.png" alt=""></a>
-                <a href="img/header2.png" class="swiper-slide"><img src="img/header2.png" alt=""></a>
+        <div class="container">
+            <div class="kategori my-4">
+                <h4>Kategori</h4>
+                <div class="row my-3">
+                    <div class="col"><a href="">Wisata</a></div>
+                    <div class="col"><a href="">Budaya</a></div>
+                    <div class="col"><a href="">Provinsi</a></div>
+                </div>
             </div>
-            <div class="swiper-pagination"></div>
+            <div class="rekomendasi my-4 ">
+                <h4>Rekomendasi</h4>
+                <div class="daftarRekomendasi d-flex flex-wrap my-3 justify-content-between">
+                    <div class="card my-3" >
+                        <img src="img/waerebo.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text mb-3">Manggarai, NTT</p>
+                            <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
+                        </div>
+                    </div>
+                    <div class="card my-3" >
+                        <img src="img/waerebo.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text mb-3">Manggarai, NTT</p>
+                            <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
+                        </div>
+                    </div>
+                    <div class="card my-3" >
+                        <img src="img/waerebo.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text mb-3">Manggarai, NTT</p>
+                            <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
+                        </div>
+                    </div>
+                    <div class="card my-3" >
+                        <img src="img/waerebo.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text mb-3">Manggarai, NTT</p>
+                            <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
+                        </div>
+                    </div>
+                    <div class="card my-3" >
+                        <img src="img/waerebo.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text mb-3">Manggarai, NTT</p>
+                            <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
+                        </div>
+                    </div>
+                    <div class="card my-3" >
+                        <img src="img/waerebo.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text mb-3">Manggarai, NTT</p>
+                            <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <a href="" class="a-link more">More</a>
+                </div>
+                
+            </div>
         </div>
     </main>
 
