--- a/listwisata.html
+++ b/listwisata.html
@@ -68,18 +68,40 @@
     </header>
     <main>
         <div class="container">
-            <div class="kategori my-4">
-                <h4>Kategori</h4>
-                <div class="row my-3">
-                    <div class="col"><a href="">Wisata</a></div>
-                    <div class="col"><a href="">Budaya</a></div>
-                    <div class="col"><a href="">Provinsi</a></div>
-                </div>
+            <div class="search my-4 w-100">
+                <form class="d-flex flex-lg-wrap w-100" role="search">
+                    <div class="search-form flex-grow-1">
+                        <input class="form-control me-2 flex-grow-1" type="search" placeholder="Search" aria-label="Search">
+                    </div>
+                    <div class="select-form d-flex ">
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>Kategori</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>Provinsi</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>Kabupaten</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                    </div>
+                    <div class="submit-form">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </div>
+                </form>
             </div>
             <div class="rekomendasi my-4 ">
                 <h4>Rekomendasi</h4>
                 <div class="daftarRekomendasi d-flex flex-wrap my-3 justify-content-between">
-                    <div class="card my-3" >
+                    <div class="card my-3">
                         <img src="img/waerebo.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -87,7 +109,7 @@
                             <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
                         </div>
                     </div>
-                    <div class="card my-3" >
+                    <div class="card my-3">
                         <img src="img/waerebo.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -95,7 +117,7 @@
                             <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
                         </div>
                     </div>
-                    <div class="card my-3" >
+                    <div class="card my-3">
                         <img src="img/waerebo.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -103,7 +125,7 @@
                             <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
                         </div>
                     </div>
-                    <div class="card my-3" >
+                    <div class="card my-3">
                         <img src="img/waerebo.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -111,7 +133,7 @@
                             <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
                         </div>
                     </div>
-                    <div class="card my-3" >
+                    <div class="card my-3">
                         <img src="img/waerebo.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -119,7 +141,7 @@
                             <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
                         </div>
                     </div>
-                    <div class="card my-3" >
+                    <div class="card my-3">
                         <img src="img/waerebo.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -127,7 +149,7 @@
                             <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
                         </div>
                     </div>
-                    <div class="card my-3" >
+                    <div class="card my-3">
                         <img src="img/waerebo.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -135,7 +157,7 @@
                             <a href="#" class="a-link my-2 mx-auto text-center">Explore</a>
                         </div>
                     </div>
-                    <div class="card my-3" >
+                    <div class="card my-3">
                         <img src="img/waerebo.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -144,10 +166,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex justify-content-end">
-                    <a href="" class="a-link more">More</a>
-                </div>
-                
+
+            </div>
+
+            <div class="pagination">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center">
+                      <li class="page-item disabled">
+                        <a class="page-link">Previous</a>
+                      </li>
+                      <li class="page-item"><a class="page-link" href="#">1</a></li>
+                      <li class="page-item"><a class="page-link" href="#">2</a></li>
+                      <li class="page-item"><a class="page-link" href="#">3</a></li>
+                      <li class="page-item">
+                        <a class="page-link" href="#">Next</a>
+                      </li>
+                    </ul>
+                  </nav>
             </div>
         </div>
     </main>
