--- a/HTML/detailpost.html
+++ b/HTML/detailpost.html
@@ -136,7 +136,7 @@
                             <div class="profile-icon d-flex">
                                 <img src="img/profileicon.jpg" alt="">
                                 <h4>Bachtiar Riza Pratama</h4>
-                                <p class="rating-review"><i class="fa-solid fa-star star"></i> 4,6</p>
+                                <p class="rating-review"><i class="fa-solid fa-star"></i> 4,6</p>
                             </div>
                             <div class="container-isi p-3">
                                 <div class="d-flex">
@@ -156,7 +156,7 @@
                                 <div class="profile-icon d-flex">
                                     <img src="img/profileicon.jpg" alt="">
                                     <h4>Bachtiar Riza Pratama</h4>
-                                    <p class="rating-review"><i class="fa-solid fa-star star"></i> 4,6</p>
+                                    <p class="rating-review"><i class="fa-solid fa-star"></i> 4,6</p>
                                 </div>
                                 <div class="container-isi p-3">
                                     <div class="d-flex">
@@ -191,7 +191,7 @@
                             <div class="profile-icon d-flex">
                                 <img src="img/profileicon.jpg" alt="">
                                 <h4>Bachtiar Riza Pratama</h4>
-                                <p class="rating-review"><i class="fa-solid fa-star star"></i> 4,6</p>
+                                <p class="rating-review"><i class="fa-solid fa-star"></i> 4,6</p>
                             </div>
                             <div class="container-isi p-3">
                                 <div class="d-flex">
@@ -211,7 +211,7 @@
                                 <div class="profile-icon d-flex">
                                     <img src="img/profileicon.jpg" alt="">
                                     <h4>Bachtiar Riza Pratama</h4>
-                                    <p class="rating-review"><i class="fa-solid fa-star star"></i> 4,6</p>
+                                    <p class="rating-review"><i class="fa-solid fa-star"></i> 4,6</p>
                                 </div>
                                 <div class="container-isi p-3">
                                     <div class="d-flex">
