--- a/HTML/listwisata.html
+++ b/HTML/listwisata.html
@@ -69,11 +69,11 @@
     <main>
         <div class="container">
             <div class="search my-4 w-100">
-                <form class="d-flex flex-lg-wrap w-100" role="search">
-                    <div class="search-form flex-grow-1">
+                <form class="row w-100" role="search">
+                    <div class="search-form col-md mb-2">
                         <input class="form-control me-2 flex-grow-1" type="search" placeholder="Search" aria-label="Search">
                     </div>
-                    <div class="select-form d-flex ">
+                    <div class="select-form col-md d-flex mb-2">
                         <select class="form-select" aria-label="Default select example">
                             <option selected>Kategori</option>
                             <option value="1">One</option>
@@ -93,7 +93,7 @@
                             <option value="3">Three</option>
                         </select>
                     </div>
-                    <div class="submit-form">
+                    <div class="submit-form col-md-1 mb-2">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </div>
                 </form>
