FIX ALL kurang post&edit

--- a/HTML/admin-konfirmasi.html
+++ b/HTML/admin-konfirmasi.html
@@ -45,7 +45,7 @@
         </nav>
     </header>
     <main class="profile">
-        <div class="container px-3 pt-5">
+        <div class="container px-3 pt-5 frame-profile">
             <div class="row">
                 <div class="col-md-3 d-flex border-end flex-column justify-content-between sidebar">
                     <div class="ms-3">
