--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -45,20 +45,23 @@
         </nav>
     </header>
     <main class="profile">
-        <div class="container px-3 pt-5">
+        <div class="container px-3 pt-5 frame-profile">
             <div class="row">
                 <div class="col-md-3 d-flex border-end flex-column justify-content-between sidebar">
                     <div class="ms-3">
                         <a class="nav-link mb-2" aria-current="page" href="#">Daftar Postingan</a>
-                        <a class="nav-link mb-2" href="#">Reports Postingan</a>
-                        <a class="nav-link mb-2" href="#">Reports Komentar</a>
+                        <a class="nav-link mb-2" href="#">Laporan</a>
+                        <a class="nav-link mb-2" href="#">Konfirmasi</a>
                     </div>
                     <div class="logout text-center pb-5">
                         <a class="nav-link" href="#">Keluar</a>
                     </div>
                 </div>
                 <div class="col-md content-profile px-3 overflow-auto">
-                    <h4>Daftar Postingan</h4>
+                    <div class="baris d-flex justify-content-between">
+                        <h4>Daftar Postingan</h4>
+                        <a href="" class="a-link">Tambah</a>
+                    </div>
                     <div class="search my-4 w-100">
                         <form class="row w-100" role="search">
                             <div class="search-form col-md-5 mb-2">
