--- a/HTML/daftar.html
+++ b/HTML/daftar.html
@@ -1,166 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: #f0f0f0;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  .login-container {
-    display: flex;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-  }
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
+  <!-- slider -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+  <!-- icon -->
+  <script src="https://kit.fontawesome.com/73bcd336f4.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
-  .login-image {
-    width: 40%;
-    background-image: url('img/daftar.png');
-    background-size: cover;
-    background-position: center;
-  }
-
-  .login-form {
-    width: 60%;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .login-form input {
-    width: 60%;
-    padding: 10px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 20px;
-  }
-
-  .login-form button {
-    padding: 10px 20px;
-    background-color: #007F6D;
-    color: #fff;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    margin-top: 10px;
-    width: 60%;
-  }
-
-  .login-google-button {
-    padding: 10px 0;
-    background-color: #007F6D;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    margin-top: 10px;
-    display: flex;
-    width: 60%;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-  }
+  <link rel="stylesheet" href="dist/simple-lightbox.css?v2.14.0" />
+  <link rel="stylesheet" href="style.css">
   
-  .login-google-icon {
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-  }
-  
-
-  .separator {
-    width: 60%;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    margin: 10px 0;
-  }
-  
-  .separator-line {
-    flex: 1;
-    border-top: 1px solid #ccc;
-  }
-  
-  .separator-text {
-    margin: 0 10px;
-    color: #214924;
-    font-size: 14px;
-  }
-
-  .register-link {
-    margin-top: 10px;
-    text-decoration: none;
-    color: #007F6D
-  }
-
-  .tab-container {
-    display: flex;
-    width: 60%;
-  }
-
-  .tab {
-    flex: 1;
-    text-align: center;
-    padding: 20px;
-    cursor: pointer;
-    position: relative;
-    transition: color 0.3s ease-in-out;
-  }
-
-  .active-tab {
-    color: #007F6D;
-  }
-
-  .tab::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    width: 0;
-    height: 2px;
-    background-color: #007F6D;
-    transform: translateX(-50%);
-    transition: width 0.3s ease-in-out;
-  }
-
-  .tab.active-tab::after {
-    width: 100%;
-  }
-
-  h1{
-    text-align: center;
-    color:  #007F6D;
-  }
-</style>
-<title>Login Page</title>
+  <title>Daftar Page</title>
 </head>
-<body>
-  <div class="login-container">
-    <div class="login-image"></div>
-    <div class="login-form">
-      <h1>Masuk <br>Citra Nusantara</h1>
+
+<body class="login">
+  <div class="login-container row">
+    <div class="login-image col-md d-none d-md-block">
+      <img src="img/daftar.png" alt="">
+    </div>
+    <div class="login-form col-md">
+      <h1>Daftar <br>Citra Nusantara</h1>
       <div class="tab-container">
-        <div class="tab active-tab">Masuk</div>
-        <div class="tab">Daftar</div>
+        <div class="tab">Masuk</div>
+        <div class="tab active-tab">Daftar</div>
       </div>
       <br>
       <input type="text" placeholder="Username">
+      <input type="text" placeholder="Nomer Telpon  ">
       <input type="password" placeholder="Password">
-      <button>Masuk</button>
+      <input type="password" placeholder="Konfirmasi Password">
+      <button>Daftar</button>
       <div class="separator">
         <div class="separator-line"></div>
         <span class="separator-text">Atau</span>
@@ -168,11 +47,12 @@
       </div>
       <button class="login-google-button">
         <img class="login-google-icon" src="img/icon_gg.png" alt="Google Icon">
-        Masuk Menggunakan Google
+        Daftar Menggunakan Google
       </button>
 
-      <p>Belum memiliki akun? <a class="register-link" href="masuk.html">Daftar</a></p>
+      <p>Sudah memiliki akun? <a class="register-link" href="daftar.html">Masuk</a></p>
     </div>
   </div>
 </body>
+
 </html>
